# minimax_gnerator

./: .env.example  .gitignore  0.7.0  ACTION_PLAN.md  CHANGELOG.md  IMPROVEMENT_PLAN.md  LICENSE  README.md  issues.md  opus-minimax-prompt.md  pyproject.toml  test_coqui_xtts_fix.py  test_minimax_fix.py  test_new_providers.py  test_piper_simple.py  test_quality_assurance.py
.github/workflows/: gemini-dispatch.yml
.serena/: project.yml
docs/: api_reference.md  augmentation.md  configuration.md  contributing.md  installation.md  providers.md  quickstart.md  training.md
plan/: feature-web-ui-1.md
tests/: conftest.py  test_augmentation.py  test_integration.py
tests/test_providers/: test_all_providers.py  test_base.py
wakegen/: __init__.py  __main__.py  main.py
wakegen/augmentation/: __init__.py  device_presets.py  pipeline.py  profiles.py
wakegen/augmentation/effects/: __init__.py  degradation.py  dynamics.py  telephony.py  time_domain.py
wakegen/augmentation/microphone/: __init__.py  simulator.py
wakegen/augmentation/noise/: __init__.py  events.py  mixer.py  profiles.py
wakegen/augmentation/room/: __init__.py  convolver.py  simulator.py
wakegen/config/: __init__.py  settings.py  yaml_loader.py
wakegen/config/presets/: quick_test.yaml  turkish_job.yaml
wakegen/core/: __init__.py  exceptions.py  protocols.py  types.py
wakegen/export/: __init__.py  formats.py  manifest.py  openwakeword.py  splitter.py
wakegen/generation/: __init__.py  batch_processor.py  checkpoint.py  orchestrator.py  progress.py  rate_limiter.py  variation_engine.py
wakegen/models/: __init__.py  audio.py  config.py  generation.py
wakegen/plugins/: __init__.py  base.py  discovery.py
wakegen/providers/: __init__.py  base.py  registry.py
wakegen/providers/commercial/: __init__.py  minimax.py
wakegen/providers/free/: __init__.py  edge_tts.py
wakegen/providers/opensource/: __init__.py  bark.py  chattts.py  coqui_xtts.py  f5_tts.py  kokoro.py  mimic3.py  orpheus.py  piper.py  styletts2.py
wakegen/quality/: __init__.py  asr_check.py  deduplication.py  report_generator.py  scorer.py  statistics.py  validator.py
wakegen/training/: __init__.py  ab_comparison.py  model_tester.py  script_generator.py
wakegen/ui/: __init__.py
wakegen/ui/cli/: __init__.py  commands.py  wizard.py
wakegen/utils/: __init__.py  async_helpers.py  audio.py  caching.py  gpu.py  logging.py  performance.py
wakegen/web/: __init__.py  app.py  config.py  websocket.py
wakegen/web/routers/: __init__.py  audio.py  augmentation.py  config_router.py  export.py  generation.py  providers.py  quality.py  system.py
wakegen/web/static/css/: custom.css
wakegen/web/templates/: base.html
wakegen/web/templates/components/: audio_player.html
wakegen/web/templates/pages/: augmentation.html  config.html  dashboard.html  export.html  generate.html  providers.html  quality.html  system.html
