[build-system]
# These are the tools required to build our project
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wakegen"
version = "1.0.0"
description = "A comprehensive wake word dataset generator using multiple TTS providers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Kilo Code", email = "kilo@example.com"}
]
keywords = ["wake-word", "tts", "dataset", "audio", "generation"]

# These are the libraries our project depends on to run.
# We are using specific versions to ensure stability.
dependencies = [
    "httpx>=0.27.0",            # For making HTTP requests (web calls)
    "soundfile>=0.12.0",        # For saving audio files
    "librosa>=0.10.0",          # For audio processing (resampling, etc.)
    "pydantic>=2.5.0",          # For data validation and settings
    "pydantic-settings>=2.1.0", # For managing configuration from .env files
    "python-dotenv>=1.0.0",     # For loading environment variables from .env
    "pyyaml>=6.0.0",            # For reading YAML configuration files
    "click>=8.1.0",             # For creating the Command Line Interface (CLI)
    "rich>=13.7.0",             # For beautiful terminal output (colors, tables)
    "edge-tts>=6.1.0",          # The free Text-to-Speech engine we use in Phase 1A
    "scipy>=1.11.0",            # For scientific computing and signal processing
    "pyroomacoustics>=0.7.0",   # For room impulse response simulation and reverb
    "piper-tts>=1.2.0",         # Piper TTS for CPU-friendly, fast inference with Turkish support
    "coqui-tts>=0.24.0",        # Community fork of Coqui TTS that supports modern pandas/numpy
    "onnxruntime>=1.16.0",      # ONNX runtime for efficient model inference
    "pandas>=2.1.0",            # For data manipulation and CSV export
    "scikit-learn>=1.3.0",      # For stratified dataset splitting
    "jinja2>=3.1.0",            # For generating training scripts from templates
]

[project.optional-dependencies]
# Tools for development (testing, formatting, checking types)
dev = [
    "pytest>=7.0.0",    # For running tests
    "pytest-asyncio",   # For testing async code
    "black",            # For code formatting
    "isort",            # For sorting imports
    "mypy",             # For static type checking
]
# Dependencies for the Web UI (optional, install with: pip install wakegen[web])
web = [
    "fastapi>=0.109.0",        # Modern async web framework for building APIs
    "uvicorn[standard]>=0.27.0",  # ASGI server to run FastAPI with WebSocket support
    "python-multipart>=0.0.6", # For handling file uploads in FastAPI
    "websockets>=12.0",        # WebSocket protocol for real-time updates
    "aiofiles>=23.0.0",        # Async file operations for serving audio files
]

[project.scripts]
# This allows us to run the tool using 'wakegen' in the terminal
wakegen = "wakegen.main:cli"

[tool.setuptools.packages.find]
# Automatically find all packages inside the project directory
where = ["."]
include = ["wakegen*"]

[tool.pytest.ini_options]
# Configuration for the pytest testing tool
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
# Configuration for the mypy type checker
python_version = "3.10"
strict = true
ignore_missing_imports = true